Night theme, fix overlap on the top

--- a/CodeDay/static/css/styles.css
+++ b/CodeDay/static/css/styles.css
@@ -84,14 +84,33 @@ body {
     width: 100%;
     position: relative;
 }
-.h-hover > a{
+
+.h-hover>a {
     opacity: 0;
     position: absolute;
     left: 0;
     top: 50%;
     transform: translateY(-50%) translateX(-200%);
 }
-.h-hover:hover > a{
+
+.h-hover:hover>a {
     opacity: 1;
     transform: translateY(-50%);
+}
+
+#night-theme-button {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2000;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+#night-theme-button:hover {
+    text-shadow: 0 0 5px black;
+}
+
+body.night #night-theme-button:hover {
+    text-shadow: 0 0 5px white;
 }
